Photon captures are progressing. Still not there and still much too slow.

--- a/tests/interactive_capture_test.ipynb
+++ b/tests/interactive_capture_test.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "from mkidgen3.feedline_server import start_zmq_devices, FeedlineReadout\n",
     "from mkidgen3.feedline_objects import zpipe, CaptureRequest, FeedlineConfig\n",
-    "from mkidgen3.feedline_client_objects import CaptureJob"
+    "from mkidgen3.captures import CaptureJob"
    ]
   },
   {
